# template-django-tailwind

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
